--- a/Base.lproj/Main.storyboard
+++ b/Base.lproj/Main.storyboard
@@ -1,24 +1,125 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="IOS_Reseau_Appel" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9Uq-5f-Ic1">
+                                <rect key="frame" x="0.0" y="266" width="414" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="cNL-Ha-fpQ">
+                                <rect key="frame" x="0.0" y="44" width="414" height="194"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="194" id="C4I-d6-Uzm"/>
+                                </constraints>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Nk6-Mi-4Zp">
+                                <rect key="frame" x="0.0" y="407" width="414" height="45"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="45" id="jI5-ch-nQx"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5Xl-OW-qv9">
+                                <rect key="frame" x="0.0" y="566" width="414" height="45"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="45" id="XF0-HW-BMN"/>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="53" id="qtX-V6-PNd"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Gfp-lO-drt">
+                                <rect key="frame" x="0.0" y="513" width="414" height="45"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="45" id="K0G-XB-gyb"/>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="56" id="atK-R7-ua4"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Crw-RE-KVr">
+                                <rect key="frame" x="0.0" y="460" width="414" height="45"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="45" id="1AH-4f-EAY"/>
+                                    <constraint firstAttribute="height" constant="45" id="u1J-2g-tgT"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eIb-ao-JA9">
+                                <rect key="frame" x="0.0" y="619" width="414" height="45"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="45" id="39T-R4-SXm"/>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="45" id="nbD-YB-GcC"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gTI-ek-ssW">
+                                <rect key="frame" x="0.0" y="335" width="414" height="72"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="72" id="3Xh-PM-9RQ"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="5Xl-OW-qv9" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="06d-Zq-BPw"/>
+                            <constraint firstItem="gTI-ek-ssW" firstAttribute="top" secondItem="9Uq-5f-Ic1" secondAttribute="bottom" constant="48.5" id="1Zx-q5-h6F"/>
+                            <constraint firstItem="cNL-Ha-fpQ" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="3a0-LS-cmD"/>
+                            <constraint firstItem="gTI-ek-ssW" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="4SW-iu-j0s"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="eIb-ao-JA9" secondAttribute="trailing" id="6Ip-Jn-hxe"/>
+                            <constraint firstItem="cNL-Ha-fpQ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="97J-0M-0rJ"/>
+                            <constraint firstItem="Crw-RE-KVr" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="CCb-XR-O0y"/>
+                            <constraint firstItem="gTI-ek-ssW" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="FAC-bB-Dh5"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Crw-RE-KVr" secondAttribute="trailing" id="HE9-gJ-Ivl"/>
+                            <constraint firstItem="Gfp-lO-drt" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="IzX-K9-vcR"/>
+                            <constraint firstItem="9Uq-5f-Ic1" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="Jy6-M1-OWg"/>
+                            <constraint firstItem="Nk6-Mi-4Zp" firstAttribute="top" secondItem="gTI-ek-ssW" secondAttribute="bottom" id="LRL-lj-RJm"/>
+                            <constraint firstItem="Nk6-Mi-4Zp" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="QtB-OT-mDD"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="5Xl-OW-qv9" secondAttribute="trailing" id="R7i-n8-PwE"/>
+                            <constraint firstItem="Crw-RE-KVr" firstAttribute="top" secondItem="Nk6-Mi-4Zp" secondAttribute="bottom" constant="8" symbolic="YES" id="Ras-tm-r5H"/>
+                            <constraint firstItem="eIb-ao-JA9" firstAttribute="top" secondItem="5Xl-OW-qv9" secondAttribute="bottom" constant="8" symbolic="YES" id="UXa-h8-JF9"/>
+                            <constraint firstItem="9Uq-5f-Ic1" firstAttribute="top" secondItem="cNL-Ha-fpQ" secondAttribute="bottom" constant="28" id="Y1y-FQ-92c"/>
+                            <constraint firstItem="eIb-ao-JA9" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="gdI-fG-2sw"/>
+                            <constraint firstItem="Gfp-lO-drt" firstAttribute="top" secondItem="Crw-RE-KVr" secondAttribute="bottom" constant="8" symbolic="YES" id="jLA-oW-uGk"/>
+                            <constraint firstItem="cNL-Ha-fpQ" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="jwx-c1-M9u"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Nk6-Mi-4Zp" secondAttribute="trailing" id="l3k-e7-KWB"/>
+                            <constraint firstItem="9Uq-5f-Ic1" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="rDy-7H-o8i"/>
+                            <constraint firstItem="5Xl-OW-qv9" firstAttribute="top" secondItem="Gfp-lO-drt" secondAttribute="bottom" constant="8" symbolic="YES" id="rn1-3R-ieA"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Gfp-lO-drt" secondAttribute="trailing" id="z2z-II-Szh"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="banner" destination="cNL-Ha-fpQ" id="WQn-TY-7l5"/>
+                        <outlet property="label1" destination="9Uq-5f-Ic1" id="XvS-Dt-1ff"/>
+                        <outlet property="label2" destination="gTI-ek-ssW" id="f2U-L9-c1g"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="105.79710144927537" y="88.392857142857139"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
